<resources>
    <string name="app_name">DrinkUp</string>
    <!-- Strings related to registration -->
    <string name="prompt_email">Email</string>
    <string name="password">Lozinka</string>
    <string name="registration_button_caption">Registriraj se!</string>
    <string name="registration_successful">"Zahtjev za registracijom je uspješno poslan!"</string>
    <string name="invalid_email_format">Email adresa nije u valjanom formatu!</string>
    <string name="invalid_password">Lozinka treba sadržavati minimalno 8 znakova, među kojima trebaju biti slova i brojevi!</string>
    <string name="duplicate_email_or_oib">"Izgleda da već postoji korisnički račun s navedenim OIB-om i/ili e-mail adresom!"</string>
    <string name="registration_failed">"Dogodio se neuspjeh kod registracije!"</string>
    <string name="login_failed">"Račun s unesenim podatcima ne postoji"</string>
    <string name="reset_password_failed">"Račun s unesenim email-om ne postoji"</string>
    <string name="reset_password_success">"Link za resetiranje lozinke je uspješno poslan na vašu email adresu."</string>
    <string name="oib">OIB</string>
    <string name="firstName">Ime</string>
    <string name="lastName">Prezime</string>
    <string name="passwordRepeat">Ponovi lozinku</string>
    <string name="male">Muško</string>
    <string name="genderOptionsLabelCaption">Spol</string>
    <string name="female">Žensko</string>
    <string name="roleLabelCaption">Vi ste:</string>
    <string name="password_mismatch">Lozinke se ne podudaraju!</string>
    <string name="invalid_oib_format">OIB nije ispravno unesen!</string>
    <string name="undefined_first_name">Niste unijeli ime</string>
    <string name="undefined_last_name">Niste unijeli prezime!</string>
    <string name="some_errors_exist">U neka polja nisu navedene ispravne vrijednosti!</string>
    <string name="undefined_fields_exist">Neka polja nisu popunjena</string>
    <string name="role_retrieval_failed">Trenutno nije moguće obaviti registraciju. Pokušajte malo kasnije!</string>
    <string name="get_all_roles_url">https://air2006.azurewebsites.net/api/uloga/</string>
    <string name="get_all_bars_url">https://air2006.azurewebsites.net/api/objekt?page=1&amp;size=10000</string>
    <string name="assign_bar_employee_url">https://air2006.azurewebsites.net/api/zaposlenik-objekt/add</string>
    <string name="create_offer_url">https://air2006.azurewebsites.net/api/ponuda/add</string>
    <string name="registration_url">https://air2006.azurewebsites.net/api/korisnik/register</string>
    <string name="login_url">https://air2006.azurewebsites.net/api/korisnik/login</string>
    <string name="forgot_pass_url">https://air2006.azurewebsites.net/api/korisnik/reset-password-mail</string>
    <string name="offers_url">https://air2006.azurewebsites.net/api/ponuda/?pageSize=100</string>
    <string name="token_details_url">https://air2006.azurewebsites.net/api/token/?filterColumn=id&amp;filterValue={0}&amp;filterOption=11</string>
    <string name="token_activation_url">https://air2006.azurewebsites.net/api/token/activate/{0}</string>
    <string name="caffes_url">https://air2006.azurewebsites.net/api/objekt/</string>
    <string name="offer_categories_url">https://air2006.azurewebsites.net/api/vrsta-ponude/</string>
    <string name="bar_of_employee_url">https://air2006.azurewebsites.net/api/zaposlenik-objekt/?filterColumn=korisnikId&amp;filterValue={0}&amp;filterOption=11</string>
    <string name="add_token_url">https://air2006.azurewebsites.net/api/token/add</string>
    <string name="delete_token_url">https://air2006.azurewebsites.net/api/token/delete/</string>
    <string name="navigation">Navigacija</string>
    <string name="customize_offer_list">Upravljaj prikazom ponuda</string>
    <string name="offer_order">Redoslijed ponuda</string>
    <string name="offer_descending">Cijena veća - manja</string>
    <string name="offer_ascending">Cijena manja - veća</string>
    <string name="offer_filter">Filtriraj ponude</string>
    <string name="token_list_fragment_title">Moji tokeni</string>
    <string name="offer_list_fragment_title">Ponude</string>
    <string name="login_activity_title">Prijava</string>
    <string name="forgot_password_activity_title">Zaboravljena lozinka</string>
    <string name="offer_details_activity_title">Detaljni pregled ponude</string>
    <string name="registration_activity_title">Registracija</string>
    <string name="offer_categories_retrieval_error">Dogodila se pogreška kod dohvaćanja kategorija ponuda. Zbog toga filtriranje podataka nije moguće</string>
    <string name="offer_creation_fragment_title">Kreiranje ponude</string>
    <string name="token_details_activity_title">Detalji tokena ponude</string>
    <string name="offer_title">Naslov ponude</string>
    <string name="offer_description">Opis ponude</string>
    <string name="offer_price">Cijena</string>
    <string name="offers_number_of_tokens">Broj tokenā</string>
    <string name="create_offer_button_caption">Kreiraj ponudu</string>
    <string name="offer_type_label_caption">Vrsta ponude:</string>
    <string name="offer_types_retrieval_error_on_offer_creation">Trenutno nije moguće dohvatiti popis vrsta ponuda pa tako nije moguće ni kreiranje novih ponuda. Molimo, pokušajte kasnije</string>
    <string name="offer_creation_successful">Ponuda je uspješno kreirana!</string>
    <string name="offer_creation_failed">Kreiranje ponude nije uspjelo! Molimo pokušajte kasnije</string>
    <string name="no_bars_for_user_found">Čini se da više niste dodijeljeni nijednome ugostiteljskom objektu. Probajte se prijaviti s nekim drugim korisničkim računom</string>
    <string name="token_scanning_fragment_title">Skeniranje tokena</string>
    <string name="token_successfully_activated">Uspješno skeniran i aktiviran token!</string>
    <string name="token_activation_failed">Dogodio se neuspjeh prilikom pokušaja aktivacije tokena!</string>
    <string name="token_info_retrieval_failed">Dogodio se neuspjeh kod dohvaća detalja o skeniranom tokenu!</string>
    <string name="token_already_redeemed">Skenirani token je već iskorišten!</string>
    <string name="token_not_applicable_here">Skenirani token nije iskoristiv u ovome ugostiteljskom objektu!</string>
    <string name="token_no_longer_exists">Ne uspijeva se pronaći nijedan token za skenirani Qr kod!</string>
    <string name="redeem_token_confirmation_message">Želite li poništiti token za ponudu \'\'{0}\'\' ({1})?</string>
    <string name="redeem_token_confirmation_message_without_description">Želite li poništiti token za ponudu \'\'{0}\'\'?</string>
    <string name="redeem_option">Prihvati</string>
    <string name="reject_option">Odbij</string>
    <string name="account_logout">Odjava</string>
    <string name="camera_permission_required">Potrebno je dozvoliti korištenje kamere od strane aplikacije za skeniranje tokena!</string>
    <string name="error_loading_camera">Dogodio se sljedeći neuspjeh kod pokretanja kamere:</string>
    <string name="qr_code_image_description">QR kod tokena</string>

    <string name="offer_edit_title">Uređivanje ponude</string>
    <string name="edit_offer_button_caption">Spremi</string>
    <string name="cancel_offer_button_caption">Odustani</string>
    <string name="delete_offer_button_caption">Obriši</string>
    <string name="edit_offer_url">https://air2006.azurewebsites.net/api/ponuda/update</string>
    <string name="delete_offer_url">https://air2006.azurewebsites.net/api/ponuda/delete/</string>
    <string name="offer_update_successful">Ponuda je uspješno ažurirana</string>
    <string name="offer_update_failed">Ažuriranje ponude nije uspjelo! Molimo pokušajte kasnije</string>
    <string name="offer_delete_successful">Ponuda je uspješno obrisana</string>
    <string name="offer_delete_failed">Brisanje ponude nije uspjelo! Molimo pokušajte kasnije</string>
</resources>
